--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,9 @@
 set -g default-terminal "screen-256color"
-setw -g mode-mouse on
-set -g mouse-select-pane on
+set -g mouse-utf8 on
+set -g mouse on
 set -s escape-time 50
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
-
+set -g status-bg colour240
+set -g status-fg white
