--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 set -g default-terminal "screen-256color"
-set -g mouse-utf8 on
+#set -g mouse-utf8 on
 set -g mouse on
 set -s escape-time 50
 bind '"' split-window -c "#{pane_current_path}"
